--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "chatbot-frontend",
   "version": "1.0.0",
+  "type": "module",  
   "dependencies": {
     "axios": "^1.7.9",
     "lucide-react": "^0.344.0",
